<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.zhengineer.dutchblitzscorer.MainActivity">
    <group android:id="@+id/regular_group">
        <item
            android:id="@+id/action_settings"
            android:title="@string/action_settings"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_info"
            android:title="@string/info"
            app:showAsAction="never" />
    </group>
    <group
        android:id="@+id/selection_group"
        android:visible="false">
        <item
            android:id="@+id/delete_games"
            android:icon="@drawable/ic_delete"
            android:title="@string/delete_games"
            android:visible="false"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/cancel_selection"
            android:icon="@drawable/ic_cancel"
            android:title="@string/cancel_selection"
            android:visible="false"
            app:showAsAction="ifRoom" />
    </group>
</menu>