<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/MainFragment">

    <fragment
        android:id="@+id/MainFragment"
        android:name="com.zhengineer.dutchblitzscorer.ui.fragments.MainFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_main">
        <action
            android:id="@+id/action_MainFragment_to_InfoFragment"
            app:destination="@id/InfoFragment"
            tools:layout="@layout/fragment_info" />
        <action
            android:id="@+id/action_MainFragment_to_CreateGameFragment"
            app:destination="@id/CreateGameFragment"
            app:enterAnim="@anim/slide_in_from_right_with_fade"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim" />
        <action
            android:id="@+id/action_MainFragment_to_nav_graph_scoring"
            app:destination="@id/nav_graph_scoring"
            app:enterAnim="@anim/fade_in">
            <argument
                android:name="gameId"
                app:argType="long" />
        </action>
    </fragment>
    <fragment
        android:id="@+id/InfoFragment"
        android:name="com.zhengineer.dutchblitzscorer.ui.fragments.InfoFragment"
        android:label="@string/info"
        tools:layout="@layout/fragment_info" />
    <fragment
        android:id="@+id/CreateGameFragment"
        android:name="com.zhengineer.dutchblitzscorer.ui.fragments.CreateGameFragment"
        android:label="@string/setup_game"
        tools:layout="@layout/fragment_new_game_players">
        <action
            android:id="@+id/action_GameConfigFragment_to_GameScoringFragment"
            app:destination="@id/nav_graph_scoring"
            app:enterAnim="@anim/fade_in">
            <argument
                android:name="gameId"
                app:argType="long" />
        </action>
    </fragment>
    <navigation
        android:id="@+id/nav_graph_scoring"
        app:startDestination="@id/GameScoringFragment">
        <fragment
            android:id="@+id/GameScoringFragment"
            android:name="com.zhengineer.dutchblitzscorer.ui.fragments.GameScoringFragment"
            android:label="@string/game_scores"
            tools:layout="@layout/fragment_game_scoring">
            <action
                android:id="@+id/action_JumpToMainFragment"
                app:destination="@id/MainFragment"
                app:enterAnim="@anim/nav_default_enter_anim"
                app:popUpToInclusive="true" />
            <action
                android:id="@+id/action_GameScoringFragment_to_RecordRoundFragment"
                app:destination="@id/RecordRoundFragment"
                app:enterAnim="@anim/nav_default_enter_anim"
                app:exitAnim="@anim/nav_default_exit_anim"
                app:popEnterAnim="@anim/nav_default_pop_enter_anim"
                app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        </fragment>
        <fragment
            android:id="@+id/RecordRoundFragment"
            android:name="com.zhengineer.dutchblitzscorer.ui.fragments.RecordRoundFragment"
            android:label="@string/record_round"
            tools:layout="@layout/fragment_record_round">
            <action
                android:id="@+id/action_RecordRoundFragment_to_GameScoringFragment"
                app:destination="@id/GameScoringFragment"
                app:enterAnim="@anim/nav_default_enter_anim"
                app:exitAnim="@anim/nav_default_exit_anim"
                app:popEnterAnim="@anim/nav_default_pop_enter_anim"
                app:popExitAnim="@anim/nav_default_pop_exit_anim"
                app:popUpToInclusive="true" />
            <argument
                android:name="roundNumber"
                app:argType="integer" />
        </fragment>
    </navigation>
</navigation>